--- a/vit-pro/package.json
+++ b/vit-pro/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.8.3",
     "vue": "^3.4.37",
     "vue-router": "~4.4.3"
   },
   "devDependencies": {
-    "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.1.2",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
