--- a/vit-pro/package.json
+++ b/vit-pro/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "sass": "^1.79.2",
+    "sass-loader": "^16.0.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
