--- a/vit-pro/package.json
+++ b/vit-pro/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.8.3",
     "vue": "^3.4.37",
     "vue-router": "~4.4.3"
@@ -17,7 +18,7 @@
     "@vitejs/plugin-vue": "^5.1.2",
     "sass": "^1.79.2",
     "sass-loader": "^16.0.1",
-    "typescript": "^5.5.3",
+    "typescript": "^5.6.2",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
   }
