--- a/vit-pro/package.json
+++ b/vit-pro/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.7",
     "element-plus": "^2.8.3",
+    "lodash-es": "^4.17.21",
     "vue": "^3.4.37",
     "vue-router": "~4.4.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.9",
+    "@types/lodash-es": "^4.17.12",
     "@vitejs/plugin-vue": "^5.1.2",
     "sass": "^1.79.2",
     "sass-loader": "^16.0.1",
