--- a/vit-pro/package.json
+++ b/vit-pro/package.json
@@ -12,11 +12,13 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
     "element-plus": "^2.8.3",
+    "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
     "vue": "^3.4.37",
     "vue-router": "~4.4.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.9",
     "@types/lodash-es": "^4.17.12",
     "@vitejs/plugin-vue": "^5.1.2",
