--- a/vit-pro/package.json
+++ b/vit-pro/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.8.3",
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
+    "pinia": "^2.2.2",
     "vue": "^3.4.37",
     "vue-router": "~4.4.3"
   },
